--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
             theme: {
                 extend: {
                     colors: {
-                        clifford: '#da373d',
+                        'gradient-start': '#FF8938',
+                        'gradient-end': '#F00',
                     }
                 }
             }
@@ -38,10 +39,10 @@
 </head>
 
 <body class="font-manrope">
-    <header>
+    <header class="container mx-auto">
         <!-- banner section starts here  -->
-        <div class="hero">
-            <div class="hero-content flex-col lg:flex-row">
+        <div class="my-20">
+            <div class="flex justify-between items-center flex-col lg:flex-row">
                 <div>
                     <h1 class="text-7xl font-extrabold">
                         It's good <br>
@@ -49,10 +50,10 @@
                         Tea House</h1>
                     <p class="py-6">Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.
                     </p>
-                    <button class="btn btn-primary">Explore More</button>
+                    <button class="btn btn-primary bg-gradient-to-r from-gradient-start to-gradient-end text-white">Explore More <i class="fa-solid fa-arrow-trend-up"></i></button>
                 </div>
                 <div>
-                    <img src="./images/banner.png" class="max-w-sm" />
+                    <img src="./images/banner.png" />
                     <!-- rating badge  -->
                     <div class=" -mt-16 flex items-center gap-4 drop-shadow-lg bg-white p-5 w-60">
                         <i class="fa-solid fa-star text-3xl text-amber-400"></i>
@@ -142,7 +143,7 @@
             </div>
         </section>
         <!-- super clients sections  -->
-        <section class="my-24 flex flex-col lg:flex-row gap-12 rounded-lg bg-gradient-to-r from-[#FF8938] to-[#F00] px-16 py-24">
+        <section class="my-24 flex flex-col lg:flex-row gap-12 rounded-lg bg-gradient-to-r from-gradient-start to-gradient-end px-16 py-24">
             <div class="flex lg:pr-28 items-center">
                 <div class="space-y-5">
                     <h2 class="text-5xl font-extrabold text-white">Meet Our Super <br>
@@ -185,9 +186,52 @@
             </div>
         </section>
     </main>
-    <footer>
-
-    </footer>
+    <footer class="px-4 lg:px-48 py-10 bg-base-200 text-base-content">
+        <div class="lg:flex justify-between my-24">
+            <img src="./images/cup.png" alt="">
+            <p>
+                <span>Ready to get strated?</span>
+                <button class="btn bg-gradient-to-r from-gradient-start to-gradient-end text-white">Get Started</button>
+            </p>
+        </div>
+       <div class="footer">
+        <div>
+            <span class="footer-title">Services</span> 
+            <a class="link link-hover">Branding</a> 
+            <a class="link link-hover">Design</a> 
+            <a class="link link-hover">Marketing</a> 
+            <a class="link link-hover">Advertisement</a>
+          </div> 
+          <div>
+            <span class="footer-title">Company</span> 
+            <a class="link link-hover">About us</a> 
+            <a class="link link-hover">Contact</a> 
+            <a class="link link-hover">Jobs</a> 
+            <a class="link link-hover">Press kit</a>
+          </div> 
+          <div>
+            <span class="footer-title">Legal</span> 
+            <a class="link link-hover">Terms of use</a> 
+            <a class="link link-hover">Privacy policy</a> 
+            <a class="link link-hover">Cookie policy</a>
+          </div> 
+          <div>
+            <span class="footer-title">Newsletter</span> 
+            <div class="form-control w-80">
+              <label class="label">
+                <span class="label-text">Enter your email address</span>
+              </label> 
+              <div class="relative">
+                <input type="text" placeholder="username@site.com" class="py-4 bg-transparent border-b-2 border-black outline-none" /> 
+                <button class="btn absolute top-0 right-0 rounded-full bg-gradient-to-r from-gradient-start to-gradient-end text-white"><i class="fa-solid fa-chevron-right"></i></button>
+              </div>
+            </div>
+          </div>
+       </div>
+        <div class="mt-10 lg:text-center">
+            <p>Copyright © 2023 - All right reserved by ACME Industries Ltd</p>
+          </div>
+      </footer>
 
 </body>
 
